fix dropdown missaligned of the border

--- a/site/static/compiled/stylesheets/screen.css
+++ b/site/static/compiled/stylesheets/screen.css
@@ -3473,6 +3473,13 @@ div#optionplan .pdf_upload_preview {
   }
 }
 /* end of collapse menu */
+@media only screen and (min-width: 768px) {
+  /* override bootstrap default class */
+  .navbar-right .dropdown-menu {
+    right: 20px;
+    top: 110%;
+  }
+}
 @media only screen and (max-width: 768px) {
   body.core .container .control-label {
     padding-left: 15px;
