--- a/site/static/sass/_breakpoints.sass
+++ b/site/static/sass/_breakpoints.sass
@@ -141,7 +141,12 @@
 
 
 /* end of collapse menu */
-  
+@media only screen and (min-width: 768px)
+  /* override bootstrap default class*/
+  .navbar-right
+    .dropdown-menu
+      right: 20px
+      top: 110%  
 @media only screen and (max-width: 768px)
   body.core
     .container
